2007-06-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* Increased read-idle's low timeout times: now that all IDLE happens in
	a thread, it's not necessary anymore to quickly unblock.

2007-06-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* Connection failure handling in the IMAP code
	* Experimental timeout for hostname lookups
	* Unread and total count updating
	* Local folders for now will no longer emit "folder_changed" signals
	* The unread and total count of local folders at initial startup
	
2007-06-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed some flag values

2007-06-14  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c:
	(tny_camel_mime_part_add_part_default): now, if the
	CamelMimePart has a multipart content type already,
	it's used as the content type of the data wrapper
	if it's created. This way we can create different
	kinds of multiparts in tinymail.
	(tny_camel_mime_part_construct_from_stream_default):
	if the mime part is a message (mime type is
	message/rfc822) then instead of instanciating a
	plain data wrapper, it instanciates a
	CamelMimeMessage. This should prevent problems
	on adding these mime parts to a message or
	mime part.

2007-06-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* The cache size of local folders, feature implementation
	* Locking fix for the get-msg service of IMAP
	* Date received fix in POP
	
2007-06-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fix for the uid of POP summary items
	* Some bugfixing for finding messages

2007-06-13  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-msg.c: (_tny_camel_msg_set_folder),
	(tny_camel_msg_finalize): Take and release a reference, to avoid 
	crashes.

2007-06-13  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.c:
	(tny_camel_account_matches_url_string_default):
	Actually set the in variable so that the comparison actually happens.
	* libtinymail-camel/tny-camel-folder.c: